rhai/codegen/ui_tests/rhai_fn_missing_value.stderr
error: requires value
  --> $DIR/rhai_fn_missing_value.rs:11:11
   |
11 | #[rhai_fn(name)]
   |           ^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_missing_value.rs:22:8
   |
22 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
